# -NewDoubleLinkedListProject

./: CMakeLists.txt  README.md  main.cpp
app1/: CMakeLists.txt  app1.cpp
app2/: CMakeLists.txt  app2.cpp
libs/libA/: CMakeLists.txt  math_lib.cpp
libs/libA/include/libA/: math_lib.hpp
libs/libB/: CMakeLists.txt  data_structure_lib.cpp
libs/libB/include/libB/: data_structure_lib.hpp
