cmake_minimum_required(VERSION 3.0)
project(cmake_tutorial)
set(VAR app)
set(SOURCES main.cpp)
add_executable(${VAR} ${SOURCES})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
find_package( OpenCV REQUIRED )
add_subdirectory(libs)
add_subdirectory(app1)
add_subdirectory(app2)
target_link_libraries(${VAR} ${OpenCV_LIBS} libA libB)